학원에서 commit을 안한듯..

--- a/views/board/view.html
+++ b/views/board/view.html
@@ -9,7 +9,7 @@
     <div>제목: {{subject}} </div><br>
     <div>내용: {{content}} </div><br>
     <div>조회수: {{hit}}</div> <br>
-
+    작성일: {{date}} <br>
     <a href="/board">리스트로</a> <a href="/board/modify?num={{idx}}">수정</a> <br>
     
 
